name:                jpf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/foreverbell/jpf#readme
license:             BSD3
license-file:        LICENSE
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2018 foreverbell
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable jpf
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       parsec
